samples/_failures_safe/1761070950_a6c77b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_47954f61.c: In function ‘print_stats’:
./samples/SAFE/__tmp_47954f61.c:137:12: error: missing terminating " character
  137 |     printf("Log Analysis Results:\
      |            ^~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_47954f61.c:137:5: error: expected expression at end of input
  137 |     printf("Log Analysis Results:\
      |     ^~~~~~
./samples/SAFE/__tmp_47954f61.c:137:5: error: expected declaration or statement at end of input
